added ogata author

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,9 @@ Authors@R: c(
            role = c("aut", "cre"),
            email = "mikhail.dozmorov@gmail.com",
            comment = c(ORCID = "0000-0002-0086-8358")),
+    person(given = "Jonathan",
+           family = "Ogata",
+           role = c("aut")),
     person(given = "Eric",
            family = "Davis",
            role = c("aut")),
