--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,12 +37,15 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/mdozmorov/excluderanges
 BugReports: https://github.com/mdozmorov/excluderanges/issues
+Depends:
+    GenomicRanges
 Suggests: 
     BiocStyle,
     knitr,
     RefManageR,
     rmarkdown,
     ggridges,
+    GenomicDistributions,
     httr,
     AnnotationHub
 VignetteBuilder: knitr
