--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,8 @@ Suggests:
     ggridges,
     GenomicDistributions,
     httr,
+    pheatmap,
+    ggplot,
     AnnotationHub
 VignetteBuilder: knitr
 biocViews: AnnotationData, AnnotationHub, FunctionalAnnotation, GenomicSequence
